# aiobqstream

./: LICENSE  README.md  pyproject.toml
src/aiobqstream/: __init__.py  writer.py
src/aiobqstream/asyncio/: __init__.py  queue.py
tests/: test_writer.py
